[tool.poetry]
name = "ai-learning"
version = "0.1.0"
description = "This contains all AI projects"
authors = ["jamestq"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
